fixed bug where site wiggled laterally on mobile safari

--- a/src/style.scss
+++ b/src/style.scss
@@ -2,10 +2,13 @@ $primary: steelblue;
 
 body {
 	background-color: lightcyan !important;
+  max-width: 95%;
+  overflow-x: hidden;
 }
 
 .main {
 	margin: 3em;
+  padding: none;
   counter-reset: answerNumber;
 }
 
@@ -64,6 +67,10 @@ input[type="radio"]:checked + label {
 }
 
 /* Styles for react-rangeslider */
+
+.rangeslider-horizontal {
+  max-width: 80%;
+}
 
 .slider .btn-primary {
   margin-top: 2em;
